k8s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    wave.pusher.com/update-on-config-change: "true"
  name: ls-vision
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ls-vision-pod-ui
  template:
    metadata:
      labels:
        app: ls-vision-pod-ui
    spec:
      containers:
      - name: ls-vision
        image: 684150170045.dkr.ecr.us-east-1.amazonaws.com/ls-vision:BUILD_VERSION
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
      restartPolicy: Always
