k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ls-vision-service
spec:
  selector:
    app: ls-vision-pod-ui
  ports:
  - name: http
    protocol: TCP
    port: 4200
    targetPort: 4200
  - name: https
    protocol: TCP
    port: 443
    targetPort: 4200
  type: NodePort
