k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ls-vision-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ls-vision.ci.aws.labshare.org
    http:
      paths:
        - path: /
          backend:
            serviceName: ls-vision-service 
            servicePort: 4200
